--- a/study-3.css
+++ b/study-3.css
@@ -59,7 +59,7 @@ body {
   max-height: 5%;
   max-width: 75%;
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
   display: flex;
   flex-wrap: wrap;
@@ -92,6 +92,12 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  min-width: 140px;
+  max-width: 120px;
+}
+
+#navbar #subsidiary {
+  transform: translateX(-20px) translateY(-9px);
 }
 
 .dropdown {
@@ -464,7 +470,7 @@ body {
     height: 630px;
   }
   .company li:hover .dropdown {
-    height: 175px;
+    height: 179px;
     visibility: visible;
     opacity: 1;
     top: 0%;
@@ -474,18 +480,18 @@ body {
     font-size: 10px;
   }
   .dropdown {
-    left: 150px;
+    left: 140px;
   }
   .dropdown div a {
     height: 10px;
     padding: 15px 0 18px 0;
   }
   #gta {
-    padding-top: 10px;
-    padding-bottom: 26px;
+    padding-top: 18px;
+    padding-bottom: 20px;
   }
-  #subsidiary {
-    transform: translateY(-6px);
+  #navbar .company #subsidiary {
+    transform: translateX(-20px) translateY(-6px) !important;
   }
   .company li a {
     transform: none !important;
