--- a/study-3.css
+++ b/study-3.css
@@ -78,6 +78,10 @@ body {
   min-width: 150px;
 }
 
+.company li a {
+  cursor: pointer;
+}
+
 #navbar div a:not(.company-color) {
   text-decoration: none;
   text-align: center;
