--- a/study-3.css
+++ b/study-3.css
@@ -602,6 +602,15 @@ body {
   }
 }
 
+@media only screen and (max-width: 458px) {
+  #founders-header p {
+    font-size: 18px;
+  }
+  .retired-text {
+    font-size: 10px;
+  }
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0);
