--- a/prices.css
+++ b/prices.css
@@ -18,310 +18,215 @@ Main page has: Corp name, About us, Founders, Subsidiary Companies;
 */
 
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: #333333;
+  overflow-x: hidden;
 }
 
-#box{
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.box {
   background-color: white;
-  width: 50%;
-  height: 2000px;
-  position:absolute;
+  width: 50vw;
+  min-width: 350px;
+  height: fit-content;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
   border: 5px solid rgb(255, 87, 87);
-  left: 25%;
   top: 5%;
   overflow: hidden;
 }
 
-#box p {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 35px;
+#title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.6vw;
   text-align: center;
+  align-self: flex-start;
   font-weight: 500;
   color: white;
-  border: 3px solid rgb(255, 87, 87);
-  margin-left: 150px;
-  margin-right: 150px;
-  padding-top: 10px;
-  padding-bottom: 0px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  width: 70%;
+  max-height: 5vw;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
   background-color: #333333;
   border-radius: 10px;
 }
 
-#box p span {
-  font-size: 20px;
-  position:relative;
-  top: -10px;
+#title span {
+  font-size: 1.2vw;
 }
 
-#box div #cars {
+.prices {
   background-color: white;
   color: black;
   border: none;
   text-align: left;
-  font-size: 25px;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 0vw 3vw;
+  margin-top: 1vw;
+  margin-left: -4vw;
+  margin-right: -4vw;
+  font-size: 1vw;
+}
+
+.box p {
+  font-family: "Montserrat", sans-serif;
+}
+
+.box div #cars {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div p {
-  background-color: white;
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 20px;
-  margin-left: 30px;
+.box div #cars span {
+  font-size: 1vw;
+  font-weight: normal;
 }
 
-#box div #vans {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #vans {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 650px;
-  top: -466px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #vans1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 650px;
-  top: -466px;
+.box div #vans span {
+  font-size: 1vw;
+  font-weight: normal;
 }
 
-#box div #public {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #public {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 300px;
-  top: -812px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #public1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 300px;
-  top: -812px;
+.box div #public span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #offroad {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #offroad {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  top: -700px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #offroad1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  top: -700px;
+.box div #offroad span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #novelty {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #novelty {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 300px;
-  top: -1070px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #novelty1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 300px;
-  top: -1070px;
+.box div #novelty span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #lowrider {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #lowrider {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 650px;
-  top: -1368px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #lowrider1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 650px;
-  top: -1368px;
+.box div #lowrider span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #coupe {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #coupe {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 300px;
-  top: -1300px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #coupe1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 300px;
-  top: -1300px;
+.box div #coupe span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #sedan {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #sedan {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  top: -1862px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #sedan1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  top: -1862px;
+.box div #sedan span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #bike {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #bike {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 650px;
-  top: -2520px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #bike1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 650px;
-  top: -2520px;
+.box div #bike span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #sport {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #sport {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  top: -2240px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
 }
 
-#box div #sport1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  top: -2240px;
+.box div #sport span {
+  font-size: 1vw;
+  font-weight: normal;
 }
-
-#box div #tuner {
-  font-family: 'Montserrat', sans-serif;
-  position:relative;
-  background-color: rgba(255, 255, 255, 0);
-  color: black;
-  border: none;
-  text-align: left;
-  font-size: 25px;
+.box div #tuner {
+  font-size: 1.3vw;
+  color: white;
   font-weight: 600;
-  text-decoration:underline;
-  margin-left: 30px;
-  margin-top: 60px;
-  margin-bottom: 0px;
-  left: 300px;
-  top: -2490px;
+  border: 0.2vw solid rgb(255, 87, 87);
+  padding: 1vw;
+  background-color: #333333;
+  margin-bottom: 5vw;
 }
 
-#box div #tuner1 {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0);
-  left: 300px;
-  top: -2490px;
-}
-
-::-webkit-scrollbar {
-	width: 10px;
-}
-  
-::-webkit-scrollbar-track {
-	background: rgb(66, 66, 66);
-}
-  
-::-webkit-scrollbar-thumb {
-	background: rgb(212, 212, 212);
-	border-radius: 10px;
-}
-  
-::-webkit-scrollbar-thumb:hover {
-	background: rgb(102, 102, 102);
+.box div #tuner span {
+  font-size: 1vw;
+  font-weight: normal;
 }
