--- a/prices.css
+++ b/prices.css
@@ -234,7 +234,7 @@ body {
 
 @media only screen and (max-width: 1280px) {
   .box {
-    width: 90%;
+    width: 60vw;
     border: 4px solid rgb(255, 87, 87);
   }
   .box #title {
