--- a/prices.css
+++ b/prices.css
@@ -60,6 +60,7 @@ body {
   padding-bottom: 1.5%;
   background-color: #333333;
   border-radius: 10px;
+  margin-top: 2vw;
 }
 
 #title span {
@@ -81,6 +82,10 @@ body {
 }
 
 .box p {
+  font-family: "Montserrat", sans-serif;
+}
+
+.box div {
   font-family: "Montserrat", sans-serif;
 }
 
@@ -233,12 +238,21 @@ body {
 }
 
 @media only screen and (max-width: 1280px) {
+  body {
+    background-color: rgb(94, 94, 94);
+  }
   .box {
-    width: 60vw;
+    width: 85vw;
+    background-color: #333333;
     border: 4px solid rgb(255, 87, 87);
+  }
+  .box div {
+    background-color: #333333;
   }
   .box #title {
     font-size: 3vw;
+    background-color: white;
+    color: black;
     padding-bottom: 4vw;
     border: 2.5px solid rgb(255, 87, 87);
   }
@@ -260,12 +274,11 @@ body {
   }
   .box div #sport {
     margin-bottom: 3.1vw;
-    border: 2.5px solid rgb(255, 87, 87);
-    padding: 2vw;
   }
   .box div #tuner,
   .box div #bike,
   .box div #coupe,
+  .box div #sport,
   .box div #sedan,
   .box div #lowrider,
   .box div #novelty,
@@ -273,6 +286,8 @@ body {
   .box div #public,
   .box div #cars,
   .box div #vans {
+    background-color: white;
+    color: black;
     border: 2.5px solid rgb(255, 87, 87);
     padding: 2vw;
   }
