--- a/prices.css
+++ b/prices.css
@@ -401,7 +401,7 @@ body {
 
   #openbtn {
     color: rgb(255, 87, 87);
-    font-size: 6vw !important;
+    font-size: 6vw;
     left: 4vw;
     top: 0.6%;
     transition: 0.2s;
