--- a/employment.css
+++ b/employment.css
@@ -32,10 +32,17 @@ body {
   text-align: center;
   font-size: 2vw;
   border-radius: 10px;
-  margin-top: 6vw;
+  margin-top: 5vw;
   position: relative;
 }
 
+.menu {
+  color: rgb(236, 236, 236);
+  border: 4px solid rgb(236, 236, 236);
+  text-shadow: 0 0 0.5em rgb(236, 236, 236);
+  box-shadow: inset 0 0 0.5em rgb(236, 236, 236), 0 0 0.5em rgb(236, 236, 236);
+  transition: background-color 0.1s linear;
+}
 .sales {
   color: rgb(255, 225, 89);
   border: 4px solid rgb(255, 225, 89);
@@ -65,6 +72,19 @@ body {
   transition: background-color 0.1s linear;
 }
 
+.menu::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background-color: rgb(236, 236, 236);
+  top: 110%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(5vw) rotateX(20deg) scale(1, 0.5);
+  filter: blur(3vw);
+  opacity: 0.4;
+}
 .sales::before {
   pointer-events: none;
   content: "";
@@ -118,6 +138,20 @@ body {
   opacity: 0.4;
 }
 
+.menu::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 3vw 0.2vw rgb(236, 236, 236);
+  opacity: 0;
+  transition: opacity 0.1s linear;
+}
+.menu:hover::after {
+  opacity: 1;
+}
 .sales::after {
   content: "";
   position: absolute;
@@ -175,6 +209,7 @@ body {
   opacity: 1;
 }
 
+.menu:hover::before,
 .sales:hover::before,
 .estate:hover::before,
 .designer:hover::before,
@@ -182,6 +217,11 @@ body {
   opacity: 1;
 }
 
+.menu:hover,
+.menu:focus {
+  background-color: rgb(236, 236, 236);
+  color: #414141;
+}
 .sales:hover,
 .sales:focus {
   background-color: rgb(255, 225, 89);
@@ -203,6 +243,10 @@ body {
   color: #414141;
 }
 
+.menu {
+  transform: perspective(10vw) rotateX(30deg) scale(0.44, 0.4);
+  margin-bottom: -4vw !important;
+}
 .sales {
   transform: perspective(10vw) rotateX(20deg) scale(0.6, 0.5);
   margin-bottom: -2vw !important;
@@ -218,11 +262,17 @@ body {
 .security {
   transform: perspective(10vw) rotateX(10deg) scale(1.2, 0.8);
 }
+.menu::before,
 .sales::before,
 .estate::before,
 .designer::before,
 .security::before {
   transform: scale(1, 0.5);
+}
+
+.menu:hover {
+  transform: scale(0.65);
+  transition: transform 0.4s ease-out;
 }
 
 .sales:hover {
@@ -243,6 +293,7 @@ body {
   transition: transform 0.4s ease-out;
 }
 
+.menu:hover::before,
 .sales:hover::before,
 .estate:hover::before,
 .designer:hover::before,
@@ -266,21 +317,26 @@ body {
     font-size: 3vw;
   }
 
+  .menu {
+    margin-bottom: 9vw !important;
+    transform: perspective(0vw) rotateX(0deg) scale(1, 1);
+  }
   .sales {
-    margin-bottom: 10vw !important;
+    margin-bottom: 9vw !important;
     transform: perspective(0vw) rotateX(0deg) scale(1, 1);
   }
   .estate {
-    margin-bottom: 10vw !important;
+    margin-bottom: 9vw !important;
     transform: perspective(0vw) rotateX(0deg) scale(1, 1);
   }
   .designer {
-    margin-bottom: 10vw !important;
+    margin-bottom: 9vw !important;
     transform: perspective(0vw) rotateX(0deg) scale(1, 1);
   }
   .security {
     transform: perspective(0vw) rotateX(0deg) scale(1, 1);
   }
+  .menu::before,
   .sales::before,
   .estate::before,
   .designer::before,
@@ -288,6 +344,7 @@ body {
     transform: scale(1, 0.5);
   }
 
+  .menu:hover,
   .sales:hover,
   .estate:hover,
   .designer:hover,
@@ -296,6 +353,7 @@ body {
     transition: transform 0.4s ease-out;
   }
 
+  .menu:hover::before,
   .sales:hover::before,
   .estate:hover::before,
   .designer:hover::before,
