--- a/employment.css
+++ b/employment.css
@@ -23,6 +23,13 @@ body {
   align-content: center;
 }
 
+.container div {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
 .container a {
   background-color: rgba(255, 255, 255, 0);
   width: 60vw;
@@ -211,7 +218,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 0 3vw 0.2vw rgb(89, 120, 255);
+  box-shadow: 0 0 3vw 0.2vw rgb(255, 70, 70);
   opacity: 0;
   transition: opacity 0.1s linear;
 }
@@ -246,11 +253,6 @@ body {
 .designer:focus {
   background-color: #ffc9ed;
   color: #414141;
-}
-.security:hover,
-.security:focus {
-  background-color: rgb(89, 120, 255);
-  color: #303030;
 }
 
 .menu {
@@ -298,9 +300,21 @@ body {
   transform: scaleX(1.05);
   transition: transform 0.4s ease-out;
 }
-.security:hover {
+.security:hover,
+.security:focus {
   transform: scaleX(1.24) scaleY(1.1);
   transition: transform 0.4s ease-out;
+}
+
+.security:focus::before,
+.security:hover::before,
+.security:hover,
+.security:focus {
+  color: #303030;
+  background-color: rgb(255, 70, 70);
+  border: 4px solid rgb(255, 70, 70);
+  text-shadow: 0 0 0.5em rgb(255, 70, 70);
+  box-shadow: inset 0 0 0.5em rgb(255, 70, 70), 0 0 0.5em rgb(255, 70, 70);
 }
 
 .menu:hover::before,
