--- a/study-3.css
+++ b/study-3.css
@@ -462,6 +462,25 @@ body {
   background: rgb(189, 52, 52);
 }
 
+.loader {
+  position: absolute;
+  width: 10vw;
+  animation: loader 3s infinite ease;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 @media only screen and (max-width: 1400px) {
   #navbar {
     display: flex;
@@ -726,5 +745,17 @@ body {
   }
   100% {
     transform: translateX(-100vw);
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
