--- a/employment.css
+++ b/employment.css
@@ -328,6 +328,25 @@ body {
 }
 /* CONTAINER BOXES END | CONTAINER BOXES END | CONTAINER BOXES END | CONTAINER BOXES END */
 
+.loader {
+  position: absolute;
+  width: 200px;
+  animation: loader 3s infinite ease;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 @media only screen and (max-width: 900px) {
   .container a {
     width: 60vw;
@@ -385,5 +404,17 @@ body {
   .security:hover::before {
     transform: perspective(10vw) rotateX(10deg) scale(1.15, 0.8);
     transition: transform 0.4s ease-out;
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
