--- a/Jobs/sales.css
+++ b/Jobs/sales.css
@@ -245,6 +245,25 @@ html {
   background: rgb(255, 65, 97);
 }
 
+.loader {
+  position: absolute;
+  width: 200px;
+  animation: loader 3s infinite ease;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 @media only screen and (max-width: 1000px) {
   .footer {
     width: 40%;
@@ -323,5 +342,17 @@ html {
     bottom: -8vw;
     line-height: 6.5vw;
     font-size: 5vw;
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
