--- a/Jobs/designer.css
+++ b/Jobs/designer.css
@@ -245,6 +245,25 @@ html {
   background: rgb(255, 216, 243);
 }
 
+.loader {
+  position: absolute;
+  width: 200px;
+  animation: loader 3s infinite ease;
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 @media only screen and (max-width: 1000px) {
   .footer {
     width: 40%;
@@ -329,5 +348,17 @@ html {
   }
   #bg {
     transform: translateX(-20vw);
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
