--- a/Gambino/index.css
+++ b/Gambino/index.css
@@ -1,6 +1,7 @@
 /* 
 font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto', sans-serif; 
+font-family: 'Pirata One', cursive;
 
 Coral - rgb(255, 87, 87)
 Yellow - rgb(255, 189, 89)
@@ -81,26 +82,171 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  border-radius: 15px;
 }
 #bgText p {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Pirata One", cursive;
   color: white;
-  font-size: 5vw;
+  font-size: 7vw;
   margin: 1%;
   animation-name: main;
   animation-duration: 1s;
   animation-iteration-count: 1;
 }
-#bgText i {
-  color: white;
+#tgf {
+  color: rgb(255, 59, 59) !important;
 }
 #longpage {
   background-color: rgb(26, 26, 26);
   width: 100%;
-  height: 2000px;
+  height: 100vh;
   position: absolute;
   top: 100vh;
 }
+/* MENU NAVIGATION */
+#menu {
+  background-color: #333333;
+  border: 2px solid white;
+  width: 200px;
+  height: 50px;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  position: relative;
+}
+#menu button {
+  background-color: #333333;
+  border: 2px solid white;
+  width: 205px;
+  height: 55px;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  font-size: 2rem;
+}
+#menu p {
+  margin: 1%;
+}
+
+.progress {
+  background-color: #333333;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  overflow: hidden;
+}
+#forum {
+  top: 22px;
+  left: -250px;
+}
+#history {
+  top: 22px;
+  left: 249px;
+}
+#media {
+  transform: rotate(90deg);
+  top: 248px;
+  width: 150%;
+  left: -50px;
+}
+#hierachy {
+  transform: rotate(45deg);
+  width: 50%;
+  top: -86px;
+  left: -100px;
+}
+#discord {
+  transform: rotate(-45deg);
+  width: 50%;
+  top: -86px;
+  left: 200px;
+}
+#diamond1 {
+  transform: rotate(47.2deg);
+  width: 257%;
+  left: -332px;
+  top: 210px;
+}
+#diamond2 {
+  transform: rotate(-47.2deg);
+  width: 257%;
+  left: 17px;
+  top: 210px;
+}
+#diamond3 {
+  transform: rotate(-41.4deg);
+  width: 110%;
+  left: -278px;
+  top: -51px;
+}
+#diamond4 {
+  transform: rotate(41.5deg);
+  width: 110%;
+  left: 257px;
+  top: -51px;
+}
+#diamond5 {
+  width: 186%;
+  left: -86px;
+  top: -124px;
+}
+.ghost {
+  background-color: white;
+  width: 100%;
+  height: 2px;
+  left: 100%;
+  position: relative;
+  box-shadow: 0 0 1em rgb(255, 255, 255), 0 0 1em rgb(255, 255, 255);
+}
+
+#fhistory {
+  left: -100%;
+  top: -2px;
+}
+#fforum {
+  top: -2px;
+}
+#fmedia {
+  top: -3px;
+  left: -100%;
+}
+#fdiscord {
+  top: -1px;
+  left: -100%;
+}
+#fhierarchy {
+  top: -1px;
+}
+#fdiamond1 {
+  top: -5px;
+  left: 0;
+  opacity: 0;
+}
+#fdiamond2 {
+  top: -5px;
+  left: 0;
+  opacity: 0;
+}
+#fdiamond3 {
+  top: -2px;
+  left: 0;
+  opacity: 0;
+}
+#fdiamond4 {
+  top: -2px;
+  left: 0;
+  opacity: 0;
+}
+#fdiamond5 {
+  top: -3px;
+  left: 0;
+  opacity: 0;
+}
+
+/* MENU NAVIGATION */
 
 @keyframes loader {
   0% {
