--- a/Gambino/index.css
+++ b/Gambino/index.css
@@ -262,7 +262,7 @@ body {
 /* NAVBAR */
 
 #navbar {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0);
   width: 80%;
   height: 90%;
   position: relative;
@@ -270,6 +270,29 @@ body {
   top: 100%;
   border-radius: 40px;
   backdrop-filter: blur(6px);
+  overflow: hidden;
+}
+#closebtn {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(131, 131, 131);
+  font-size: 1.2vw;
+  position: absolute;
+  top: 3%;
+  border: none;
+  left: 2%;
+  z-index: 1;
+  cursor: pointer;
+}
+#closebtn:hover {
+  color: rgb(197, 197, 197);
+}
+
+#video {
+  width: 103%;
+  height: 103%;
+  top: -6px;
+  position: relative;
+  opacity: 0.7;
 }
 
 #credit {
